--- a/src/app/todolist/todolist.component.css
+++ b/src/app/todolist/todolist.component.css
@@ -3,3 +3,9 @@ h1 {
     text-align: center;
     font-size: 2rem;
 }
+#submitButton{
+    margin-top: 20px;
+}
+#myCheckbox{
+   margin-left: 30px;
+}
