--- a/src/app/todolist/todolist.component.html
+++ b/src/app/todolist/todolist.component.html
@@ -42,7 +42,7 @@
         </thead>
         <tbody>
             <tr *ngFor="
-            let t of taskArray">
+            let t of taskArray;index as i ">
 
                 <td>{{t.taskName}}</td>
                 <td>
@@ -52,7 +52,7 @@
                     >
                 </td>
                 <td>
-                    <button class="btn btn-danger btn-sm">Delete</button>
+                    <button class="btn btn-danger btn-sm" (click)="onDelete(i)">Delete</button>
                 </td>
             </tr>
 
