--- a/src/app/todolist/todolist.component.html
+++ b/src/app/todolist/todolist.component.html
@@ -49,6 +49,7 @@
                 <td>{{t.taskName}}</td>
                 <td>
                     <input
+                    (change)="onCheck(i)"
                         id="myCheckbox"
                         type="checkbox"
                     >
